--- a/transaction-system-server/package.json
+++ b/transaction-system-server/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,7 +14,9 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "sequelize": "^6.37.3",
+    "sequelize": "^6.37.3"
+  },
+  "optionalDependencies": {
     "sqlite3": "^5.0.2"
   }
 }
